[project]
name = "gdpr-llm-usage"
version = "0.1.0"
description = "EU-compliant LLM provider research: Azure OpenAI, Vertex Gemini, Vertex Claude, AWS Bedrock"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Azure OpenAI
    "openai>=1.82.0",
    "azure-identity>=1.22.0",
    # Google Vertex AI (Gemini) — new google-genai SDK (replaces vertexai.generative_models)
    "google-genai>=1.16.0",
    "google-cloud-aiplatform>=1.96.0",
    # Anthropic (Vertex + Bedrock transports)
    "anthropic[vertex,bedrock]>=0.52.0",
    # AWS Bedrock
    "boto3>=1.38.0",
    # LangGraph orchestration
    "langgraph>=1.2.5",
    # Shared utilities
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "tiktoken>=0.9.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
